--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,8 +25,8 @@ framework:
     trusted_hosts: ~
     session:
         # https://symfony.com/doc/current/reference/configuration/framework.html#handler-id
-        storage_id: session.storage.php_bridge
-        handler_id:  ~
+        handler_id: session.handler.native_file
+        save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
     fragments: ~
     http_method_override: true
     assets: ~
